@@ -1,3 +1,6 @@
+Thu Jan 28 00:31:25 EST 2010	JK Lowden <jklowden@freetds.org>
+	* src/dblib/dblib.c more checks for NULL DBPROCESS/LOGINREC
+
 Thu Jan 28 00:15:31 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/dblib/bcp.c: remove small warning
 
@@ -2239,4 +2242,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.2968 2010-01-27 23:15:39 freddy77 Exp $
+$Id: ChangeLog,v 1.2969 2010-01-28 05:35:54 jklowden Exp $
